update /root-metadata-info
