# internal/api/openapi/rhtas-console.yaml
@@ -249,7 +249,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-  /api/v1/trust/root-metadata:
+  /api/v1/trust/root-metadata-info:
     get:
       summary: Get TUF Root Metadata
       description: |
@@ -270,7 +270,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RootMetadata'
+                $ref: '#/components/schemas/RootMetadataInfo'
         '400':
           description: Invalid input
           content:
@@ -602,15 +602,22 @@ components:
         - artifact
         - metadata
         - digest
-    RootMetadata:
+    RootMetadataInfo:
       type: object
       properties:
-        tufRootJson:
+        version:
           type: string
-          format: json
-          description: Full raw TUF root metadata JSON
+          description: Version of the TUF root metadata
+        expires:
+          type: string
+          description: Expiry date of the TUF root metadata
+        status:
+          type: string
+          description: Status of the TUF root metadata
       required:
-        - tufRootJson
+        - version
+        - expires
+        - status
     Error:
       type: object
       properties:
